[gd_scene load_steps=3 format=3 uid="uid://dhkgf6tlsfb4k"]

[ext_resource type="Script" path="res://pause_menu.gd" id="1_q0gng"]

[sub_resource type="Theme" id="Theme_uitq7"]
default_font_size = 32

[node name="Pause menu" type="Control"]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_uitq7")
script = ExtResource("1_q0gng")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.12549)

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/v_separation = 25

[node name="Label" type="Label" parent="GridContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "Paused"
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="GridContainer"]
layout_mode = 2
text = "Resume
"

[node name="RespawnButton" type="Button" parent="GridContainer"]
layout_mode = 2
text = "Respawn"

[node name="QuitButton" type="Button" parent="GridContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="GridContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="GridContainer/RespawnButton" to="." method="_on_respawn_button_pressed"]
[connection signal="pressed" from="GridContainer/QuitButton" to="." method="_on_quit_button_pressed"]
